--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,8 +17,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Test
-      run: cargo test --verbose
+      run: cargo test --workspace --verbose
     - name: Clippy
-      run: cargo clippy -- -D warnings
+      run: cargo clippy --workspace -- -D warnings
     - name: Fmt
-      run: cargo fmt --check
+      run: cargo fmt --all --check
