--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,5 +23,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: rust test
       run: ./run.sh test-rs
+    - name: python setup
+      run: ./run.sh setup-py
     - name: python test
       run: ./run.sh test-py
