--- a/dissync-kalman-report/pyproject.toml
+++ b/dissync-kalman-report/pyproject.toml
@@ -7,6 +7,8 @@ authors = [
 ]
 requires-python = ">=3.11"
 dependencies = [
+    "matplotlib (>=3.10.6,<4.0.0)",
+    "pathlib (>=1.0.1,<2.0.0)"
 ]
 
 [tool.poetry]
@@ -30,4 +32,3 @@ strict = true
 [[tool.mypy.overrides]]
 module = ["dissync_kalman_py.*"]
 ignore_missing_imports = true
-
