--- a/dissync-kalman-report/pyproject.toml
+++ b/dissync-kalman-report/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 requires-python = ">=3.11"
 dependencies = [
     "matplotlib (>=3.10.6,<4.0.0)",
-    "pathlib (>=1.0.1,<2.0.0)"
+    "pathlib (>=1.0.1,<2.0.0)",
+    "black (>=25.9.0,<26.0.0)"
 ]
 
 [tool.poetry]
